assets/css/blocks.css
@import url('fonts.css');

/*
	The purpose of this file is to standardise and clean up. Reducing file sizes and potentially improving performance
*/

/*
	General blocks
*/

/* Massive block */

.jumbo-block {
	float: left;
	width: 100%;
}

.jumbo-block .content-wrapper {
	padding: 100px;
	padding-top: 70px;
	padding-bottom: 70px;
}

/* Large block */

.large-block {
	float: left;
	width: 100%;
}

.large-block .content-wrapper {
	padding: 70px;
	padding-top: 50px;
	padding-bottom: 50px;
}

/* Medium block */

.medium-block {
	float: left;
	width: 100%;
}

.medium-block .content-wrapper {
	padding: 40px;
	padding-top: 30px;
	padding-bottom: 30px;
}

/* Small block */

.small-block {
	float: left;
	width: 100%;
}

.small-block .content-wrapper {
	padding: 30px;
}

@media screen and (max-width: 600px) {
	.jumbo-block .content-wrapper {
		padding: 60px;
	}

	.large-block .content-wrapper {
		padding: 40px;
	}

	.medium-block .content-wrapper {
		padding: 30px;
	}

	.small-block .content-wrapper {
		padding: 20px;
	}

	@media screen and (max-width: 400px) {
		.jumbo-block .content-wrapper {
			padding: 50px;
		}

		.large-block .content-wrapper {
			padding: 35px;
		}

		.medium-block .content-wrapper {
			padding: 22px;
		}

		.small-block .content-wrapper {
			padding: 15px;
		}
	}
}

/* Stack blocks horizontally */

.block-stack-horizontal {
	display: flex;
	flex-direction: row;
	float: left;
	max-width: 100%;
	flex-wrap: nowrap;
}

.block-stack-horizontal div {
	min-width: 0;
}

@media screen and (max-width: 800px) {
	.block-stack-horizontal {
		flex-direction: column;
	}
}

/* Navigation Bar */

.fixed-wrapper {
	position: fixed;
	width: 100%;
}

.nav-bar {
	display: flex;
	width: 100%;
	float: left;
	background: #355E3B;
}

.nav-bar h3 {
	font-family: 'Poppins';
	font-size: 25pt;
	color: white;
	padding: 15px;
}

.nav-bar > a {
	text-decoration: none;
}

.nav-bar .a-wrapper {
	margin-top: auto;
	margin-bottom: auto;
	display: inline-block;
	margin-left: auto;
}

.nav-bar .a-wrapper a {
	font-family: 'Roboto';
	font-size: 20pt;
	padding: 10px;
	padding-left: 15px;
	padding-right: 15px;
	margin-right: 7px;
	color: white;
	text-decoration: none;
}

.nav-bar .a-wrapper a:hover {
	background: #2a492f;
}

.nav-bar button {
	background: transparent;
	display: none;
	width: auto;
	margin-left: auto;
	margin-top: auto;
	margin-bottom: auto;
	margin-right: 5px;
	height: 50px;
}

.nav-bar button img {
	height: 100%;
}

/*
	Mobile links
*/

.mobile-a-wrapper {
	width: 100%;
	flex-direction: column;
}

.mobile-a-wrapper a {
	font-family: 'Roboto';
	font-size: 15pt;
	width: 100%;
	background: #355E3B;
	color: white;
	text-decoration: none;
	padding: 15px;
}

.mobile-a-wrapper a:hover {
	background-color: #2a492f;
}

/* Navigation bar responsiveness */

@media screen and (max-width: 600px) {
	.nav-bar h3 {
		font-size: 20pt;
	}

	.nav-bar button {
		display: block;
	}

	.nav-bar .a-wrapper {
		display: none;
	}
}

/* Typography (Yeah I can use clever words) */

h1 {
	font-family: 'Poppins';
	font-size: 40pt;
}

h2 {
	font-family: 'Roboto';
	font-size: 30pt;
}

h3 {
	font-family: 'Roboto';
	font-size: 25pt;
}

p {
	font-family: 'Open Sans';
	font-size: 18pt;
}

p a {
	color: #2929f5;
	text-decoration: none;
}

p a:hover {
	text-decoration: underline;
}

@media screen and (max-width: 600px) {
	h1 {
		font-size: 30pt;
	}

	h2 {
		font-size: 25pt;
	}

	h3 {
		font-size: 20pt;
	}

	p {
		font-size: 15pt;
	}

	@media screen and (max-width: 400px) {
		h1 {
			font-size: 25px;
		}

		h2 {
			font-size: 20pt;
		}

		h3 {
			font-size: 17pt;
		}

		p {
			font-size: 12pt;
		}
	}
}

/*
	Colours of block
*/

.green-block {
	background: #355E3B;
	color: white;
}

.gray-block {
	background: lightgray;
}

/*
	Slideshow block
*/

.slideshow-block {
	width: 100%;
	background-repeat: no-repeat !important;
	background-size: cover !important;
	background-position-y: 30% !important;
}

.slideshow-block .slideshow-images {
	display: none; /* Slideshow images purely provide a reference for which images the JS should transition between. */
}

.slideshow-block.slideshow-dark-overlay {
	background-blend-mode: overlay;
	color: white;
}

/*
	Inputs and labels and form stuff
*/

input[type="text"] {
	display: inline-block;

	font-size: 15pt;
	font-family: 'Open Sans';

	width: 500px;
	padding: 5px;
	margin: 5px;

	border: black 2px solid;
	border-radius: 0;
	outline: none;
}

textarea {
	display: inline-block;

	font-size: 15pt;
	font-family: 'Open Sans';

	width: 500px;
	padding: 5px;
	margin: 5px;

	border: black 2px solid;
	border-radius: 0;
	outline: none;
}

form textarea:focus, form input[type="text"]:focus {
	outline: none;
	border-color: #355E3B;
}

label {
	display: block;

	font-size: 15pt;
	font-family: 'Open Sans';

	width: 170px;
	padding: 7px;
	margin: 5px;
	float: left;
}

form button {
	background: #355E3B;
	color: white;
	padding: 15px;
	font-size: 17pt;
	font-family: 'Open Sans';
	display: block;
}

.green-block form button {
	background: lightgray;
	color: black;
}

/* Responsiveness */

@media screen and (max-width: 830px) {
	form {
		display: flex;
		justify-content: center;
		align-items: center;
		flex-direction: column;
	}

	form br {
		display: none;
	}

	label {
		width: 90%;
		text-align: center;
	}

	input[type="text"] {
		width: 90%;
	}

	textarea {
		width: 90%;
	}

	@media screen and (max-width: 600px) {
		label, textarea, input[type="text"] {
			font-size: 12pt;
		}

		form button {
			font-size: 14pt;
		}
	}
}

/*
	Videos container for embedded content like YouTube
*/

.videos-wrapper {
	display: flex;
	justify-content: center;
	align-items: center;
}

.videos-wrapper iframe {
	width: 30vw;
	height: calc(30vw / 1.77);
	margin: auto;
	padding-top: 10px;
}

@media screen and (max-width: 1000px) {
	.videos-wrapper {
		flex-direction: column;
	}

	.videos-wrapper iframe {
		width: 90vw;
		height: calc(90vw / 1.77);
		margin: auto;
		padding-top: 30px;
	}
}

